--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Informations destinées au SEO (Search Engine Optimization = référencement naturel) -->
-    <title>Projet JS - Git</title>
+    <title>Projet JS - Start</title>
 
     <!-- Feuilles de styles -->
     <link rel="stylesheet" href="css/styles.css" />
