--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <!-- Regroupement de nos éléments de formulaire dans une div -->
-    <div>
+    <div class="form">
       <label for="prenom">Votre prénom :</label>
       <input type="text" id="prenom" />
 
